tests/core/data/csl/InterfaceTypeTests/InvalidDeclarations/NotAnExceptionType.csl
// A struct used in test for RaisesInvalidType.csl
struct NotAnExceptionType
{
	string name;
};
